--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,16 @@
   </head>
   <body>
     <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button type="submit">Search</button>
+      <input class="search-form__input" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button class="search-form__btn" type="submit">
+        Search
+      </button>
     </form>
+    <div class="container">
+      <div class="gallery">
+        <!-- Карточки изображений -->
+      </div>
+      <button type="button" class="load-more is-hidden">Load more</button>
+    </div>
   </body>
 </html>
